# Documents/SUNNU_MBAYE_MI/app/Http/Controllers/DetailCommendeController.php
@@ -8,11 +8,29 @@ use App\Models\Commende;
 use Illuminate\Http\Request;
 use App\Models\DetailCommende;
 use Carbon\Carbon;
+use Illuminate\Console\Command;
 use Illuminate\Routing\Controller;
 use Illuminate\Support\Facades\Auth;
 
 class DetailCommendeController extends Controller
 {
+
+
+    /**
+ * @OA\Post(
+ *     path="/api/effectuerCommande",
+ *     summary="Effectue une commande",
+ *     @OA\Response(
+ *         response=200,
+ *         description="Commande effectuée avec succès",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="message", type="string", example="Commande effectuée avec succès")
+ *         )
+ *     ),
+ *     @OA\Response(response=422, description="Non autorisé"),
+ * )
+ */
+
     public function effectuerCommande()
     {
         // Récupérez le produit par son ID
@@ -45,6 +63,23 @@ class DetailCommendeController extends Controller
         }
 
 
+
+
+
+        /**
+ * @OA\Get(
+ *     path="/api/AfficheCommende",
+ *     summary="Affiche les commandes de l'utilisateur",
+ *     @OA\Response(
+ *         response=200,
+ *         description="Commandes affichées avec succès",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="commende", type="array", @OA\Items(ref="#/components/schemas/Commende"))
+ *         )
+ *     ),
+ * )
+ */
+
    public function AfficheCommende ()
     {
         $id = Auth::guard('api')->user()->id;
@@ -52,6 +87,28 @@ class DetailCommendeController extends Controller
         return response()->json(compact('commende'), 200);
     }
 
+
+/**
+ * @OA\Get(
+ *     path="/api/voirPlus/{commende_id}",
+ *     summary="Affiche plus de détails sur une commande",
+ *     @OA\Parameter(
+ *         name="commende_id",
+ *         in="path",
+ *         description="ID de la commande",
+ *         required=true,
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Détails de la commande affichés avec succès",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="commende", type="object", ref="#/components/schemas/Commende")
+ *         )
+ *     ),
+ *     @OA\Response(response=201, description="Non connecté"),
+ * )
+ */
 
 
     public function voirPlus( $commende_id)
@@ -67,6 +124,28 @@ class DetailCommendeController extends Controller
             return response()->json(['message' => ' Veiller vous connecter dabord'], 201);
         }
     }
+
+    /**
+ * @OA\Delete(
+ *     path="/api/suprimmerCommende/{commende_id}",
+ *     summary="Supprime une commande",
+ *     @OA\Parameter(
+ *         name="commende_id",
+ *         in="path",
+ *         description="ID de la commande à supprimer",
+ *         required=true,
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Commande supprimée avec succès",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="message", type="string", example="Commande supprimée avec succès")
+ *         )
+ *     ),
+ *     @OA\Response(response=403, description="Non autorisé"),
+ * )
+ */
     public function suprimmerCommende($commende_id)
     {
         if(!Auth::guard('api')->check()){
@@ -75,6 +154,70 @@ class DetailCommendeController extends Controller
         }
         Commende::find($commende_id)->delete();
         return response()->json(['message' => 'commende supprimé avec succès'], 200);
+    }
+
+
+/**
+ * @OA\Put(
+ *     path="/api/AnnulerLivraison/{commende_id}",
+ *     summary="Annule une livraison",
+ *     @OA\Parameter(
+ *         name="livraison_id",
+ *         in="path",
+ *         description="ID de la livraison à annuler",
+ *         required=true,
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Livraison annulée avec succès",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="message", type="string", example="Livraison annulée avec succès")
+ *         )
+ *     ),
+ * )
+ */
+    
+    public function AnnulerLivraison($livraison_id)
+    {
+        $livraison = Commende::findOrFail($livraison_id);
+    
+    
+        $livraison->livraison = 'annuler';
+        $livraison->save();
+    
+        return response()->json(['message' => 'livraison annuler avec succes.'], 200);
+    }
+/**
+ * @OA\Put(
+ *     path="/api/LivraisonTerminer/{commende_id}",
+ *     summary="Termine une livraison",
+ *     @OA\Parameter(
+ *         name="livraison_id",
+ *         in="path",
+ *         description="ID de la livraison à terminer",
+ *         required=true,
+ *         @OA\Schema(type="integer")
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Livraison terminée avec succès",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="message", type="string", example="Livraison terminée avec succès")
+ *         )
+ *     ),
+ * )
+ */
+
+    public function LivraisonTerminer($livraison_id)
+    {
+        $livraison = Commende::findOrFail($livraison_id);
+    
+    
+        $livraison->livraison = 'terminer';
+        $livraison->save();
+    
+        return response()->json(['message' => 'livraison terminer avec succes.'], 200);
     }
     }
 
