# Documents/SUNNU_MBAYE_MI/routes/api.php
@@ -23,7 +23,6 @@ use Spatie\LaravelIgnition\Solutions\SolutionProviders\RunningLaravelDuskInProdu
 |
 */
 //Utilisateur inscription auth sup deconnection
-Route::post('AjoutProduit', [ProduitController::class ,'AjoutProduit']);
 
 Route::post('/role', [UserController::class ,'ajouterRole']);
 Route::post('inscrirption', [UserController::class ,'inscription']);
@@ -45,12 +44,10 @@ Route::get('/listeCategorie', [CategorieController::class ,'listeCategorie']);
 Route::get('listeProduit', [ProduitController::class ,'listeProduit']);
 Route::put('updateproduit/{id}', [ProduitController::class ,'updateproduit']);
 Route::put('supProduit/{id}', [ProduitController::class ,'supProduit']);
+Route::get('rechercheProduit', [ProduitController::class ,'rechercheProduit']);
 // Route::delete('/listeCategorie', [ProduitController::class ,'listeCategorie']);
 //pagner
-Route::POST('/AjoutPanier/{produit_id}', [PanierController::class, 'AjoutPanier']);
-Route::get('/AfficherPanier', [PanierController::class, 'AfficherPanier']);
-Route::delete('/viderPanier/{produit_id}', [PanierController::class, 'viderPanier']);
-Route::delete('/validerPanier/{panier_id}', [PanierController::class, 'validerPanier']);
+
 
 
 //commender 
@@ -58,6 +55,8 @@ Route::post('/effectuerCommande', [DetailCommendeController::class, 'effectuerCo
 Route::get('/AfficheCommende', [DetailCommendeController::class, 'AfficheCommende']);
 Route::get('/voirplus/{commende_id}', [DetailCommendeController::class, 'voirplus']);
 Route::delete('/suprimmerCommende/{commende_id}', [DetailCommendeController::class, 'suprimmerCommende']);
+Route::put('/LivraisonTerminer/{commende_id}', [DetailCommendeController::class, 'LivraisonTerminer']);
+Route::put('/AnnulerLivraison/{commende_id}', [DetailCommendeController::class, 'AnnulerLivraison']);
 
 
 Route::middleware('auth:api')->group( function (){
@@ -67,11 +66,20 @@ Route::middleware('auth:api')->group( function (){
 
     
 });
-Route::middleware(['auth','nom_role:'])->group(function () {
+Route::middleware(['auth','nom_role:revendeur'])->group(function () {
+Route::POST('/AjoutPanier/{produit_id}', [PanierController::class, 'AjoutPanier']);
+Route::get('/AfficherPanier', [PanierController::class, 'AfficherPanier']);
+Route::delete('/viderPanier/{produit_id}', [PanierController::class, 'viderPanier']);
+Route::delete('/validerPanier/{panier_id}', [PanierController::class, 'validerPanier']);
+Route::post('AjoutProduit', [ProduitController::class ,'AjoutProduit']);
 
-    // Route::post('/AjoutCategorie', [CategorieController::class ,'AjoutCategorie']);
+
+});
+Route::middleware(['auth','nom_role:agriculteur'])->group(function () {
+
 });
 Route::middleware(['auth','nom_role:admin'])->group(function () {
+    Route::post('/AjoutCategorie', [CategorieController::class ,'AjoutCategorie']);
 
 });
 
